# Phd_classes_work

./: README.md
8201_molecule_structure_analysis/: PCA_analysis.py  binomial.py  clustering_analysis.py  countNumber.py  global_alignment.py  nn_backprop.py
Genomics/: sortSNPFiles.py  sortSNPFiles_katie.py
Machine_Learning_Class_8210/: LDA_eric.py  PCA_eric.py  ann_fun.py  dbscanByHand.py  do_ANN_learning.py  do_KNN.py  do_LDA.py  do_PCA.py  k_means_clustering.py  scatter_plot.py
Machining_learning_class/: Assignment_3_1.py  Assignment_3_2.py  compute_SSE_simulated_data.py  config.py  decision_tree_impurity.py  introduction_to_python.py  iris_dataset.py  prob_1.py  prob_2.py  read_txt.py
advance_stats/: data_clean.py  statsData.csv  statsData_st000061_st000065.csv
algorithm_coursera/: maximum_pairwise_product_with_stress_test.py  sum_of_two_digits.py
fun_project/: compare_overlap_algorithm_compare.py  draw_curves.ipynb  example-spectral-analysis-logo.ipynb  file_name_process.py  plots.py
fun_project/Pacman_chatgpt/: PACMAN_CHATGPT.py
fun_project/WNV_kaggle/: WNV_NN_kaggle.py  beat_the_benchmark.csv  west-nile-ml-data-visualisation-data-analysis.ipynb  wnv_kaggle_example.py  wnv_kaggle_machine_learning.py
fun_project/explore_pytorch/: kick_off_pytorch.py
fun_project/music/: music_practice.py  with_accompany.py
fun_project/online_transaction_fraud_classification/: learn.py  prep.py
visual_interpolation/: image_io.py  models.py  pyproject.toml
web_scraping/: scrape_linkedin.py
